app/styles/app.css
/* ... */
.header-content {
  height: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  letter-spacing: 1px;
}

.header-content.mobile {
  height: 70px;
}

.header-img {
  width: 200px;
  margin-bottom: 15px;
}

.header-img.mobile {
  width: 160px;
}

.header-sub-img {
  width: 200px;
}

.header-sub-img.mobile {
  width: 180px;
}

/* ===========================================NAVBAR============================== */

.nav-bar {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 30px;
  /* background-color: #7d9ccf; */
}

.nav-item {
  font-size: 14px;
  font-weight: 500;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 110px;
  text-decoration: none;
  color: #f7f1f0;
  border-radius: 2px;
  border-right: 1px solid #7f9af0;
  cursor: pointer;
}

.nav-item.mobile {
  width: 33.3%;
}

.nav-item:last-child {
  border: none;
}

.active {
  color: #fad7d7;
}

.disabled {
  display: none;
}

.nav-item:hover {
  background-color: #5780c1;
}

.nav-item-text {
  margin-left: 5px;
  margin-right: 5px;
}

.nav-item-text.mobile {
  font-size: 14px;
}

.nav-item-bracket {
  height: 22px;
  font-size: 14px;
  color: #f58e8e;
  font-weight: 800;
  margin-left: 3px;
  margin-right: 3px;
}

.nav-item-bracket.mobile {
  font-size: 12px;
}

/* ==========================================BODY================================ */

.body {
  overflow-x: hidden;
  background-color: #fffcf7;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100%;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-top: 110px;
  height: 100%;
}

.content.mobile {
  margin-top: 100px;
}

/* ============================================ABOUT============================= */

.about-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 100%;
  height: calc(100vh - 140px);
  margin-bottom: 10px;
}

.about-container.mobile {
  height: calc(100vh - 100px);
}

.about-tiles {
  display: flex;
  flex-direction: row;
  height: 40%;
  max-height: 200px;
  overflow: hidden;
}

.about-tiles.mobile {
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  min-height: 100%;
  overflow: visible;
}

.about-tile-animated-container {

}

.about-tile-animated-container.mobile {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  max-height: 25%;
  width: 100%;
}

.about-tile-animated-container.mobile.closed {
  height: 25%;
}

.about-tile {
  cursor: pointer;
  position: relative;
  height: 100%;
  width: 25%;
  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
  overflow: hidden;
  opacity: .9;
}

.about-tile.mobile {
  height: 100%;
  width: 97%;
  box-shadow: 1px 2px 10px -4px rgba(0,0,0,0.75);
  border-radius: 3px;
  margin-top: 10px;
  opacity: 1;
}

.about-tile:hover {
  transform: scale(1.03);
  opacity: 1;
}

.about-tile.mobile:hover {
  transform: none;
}

.about-tile-title {
  text-align: center;
  position: absolute;
  top: 50%;
  right: 28%;
  color: #330b08;
  letter-spacing: 2px;
  width: 100px;
  font-weight: 600;
}

.about-tile-img-text-1 {
  text-align: center;
  position: absolute;
  top: 19%;
  right: 48%;
  width: 49%;
}

.about-tile-img-text-1.mobile {
  top: 50%;
  right: 48%;
  width: 49%;
}

.about-tile-img-text-2 {
  position: absolute;
  top: 20%;
  right: 40%;
  width: 58%;
}

.about-tile-img-text-2.mobile {
  top: 56%;
  right: 42%;
  width: 56%;
}

.about-tile-img-text-3 {
  position: absolute;
  top: 20%;
  right: 26%;
  width: 72%;
}

.about-tile-img-text-3.mobile {
  top: 56%;
  right: 23%;
  width: 74%;
}

.about-tile-img-text-4 {
  position: absolute;
  top: 20%;
  right: 43%;
  width: 56%;
}

.about-tile-img-text-4.mobile {
  top: 56%;
  right: 42%;
  width: 56%;
}

.about-tile-img-bg {
  height: 100%;
  width: 100%;
  background-color: #8faad6;
  object-fit: cover;
  object-position: 40% 50%;
}

.about-tile-img-bg.mobile {
}

.about-content-animated-container {
  display: flex;
  justify-content: center;
  width: 100%;
  max-height: 60%;
  height: 60%;
}

.about-content-animated-container.mobile {
  max-height: 80%;
  height: 80%;
  width: 100%;
}

.about-content {
  border-radius: 3px 3px 0 0;
  margin-top: 20px;
  max-height: 100%;
  width: fit-content;
  display: flex;
  flex-direction: column;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  background-color: white;
  border-left: 1px solid #bababa;
  border-right: 1px solid #bababa;
  border-bottom: 1px solid #bababa;
}

.about-content.mobile {
  width: 80%;
  justify-content: center;
  height: fit-content;
  flex-direction: column;
  padding: 20px;
  background-color: white;
}

.about-content-header {
  border-radius: 3px 3px 0 0;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 40px;
  background: rgb(58,131,177);
  background: linear-gradient(90deg, rgba(58,131,177,1) 35%, rgba(18,60,107,1) 83%);
  width: 100%;
}

.about-content-container {
  display: flex;
  flex-direction: row;
  padding: 20px;
  width: 100%;
}

.about-content-img-container {

}

.about-content-img {
  max-width: auto;
  border-radius: 5px;
  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
}

.about-content-img.mobile {
  height: 160px;
  width: 180px;
  border-radius: 5px;
  box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
}

.about-content-text {
  max-width: 500px;
  font-size: 16px;
  font-weight: 400;
  margin-top: 0;
  margin-left: 20px;
  color: #454545;
}

.about-content-link {
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  background-color: #4287f5;
  color: white;
  height: 25px;
  padding: 3px;
  border: 1px solid #306cc9;
  text-align: center;
  border-radius: 3px;
  font-weight: 300;
  box-shadow: 0px 1px 7px -4px rgba(0,0,0,0.75);
  margin-top: 10px;
}
/* ... */

